Fixed scrollbar to only appear when necessary

--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ a button:hover {
     /* margin: auto; */
     margin: auto;
     padding-bottom: 60px;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 10px;
 }
 
